<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Get-My-Driver-Card</string>
    <string name="logout_text">Log out</string>
    <string name="sign_in_google">Sign in with google</string>
    <string name="sign_in_facebook">Sign in with facebook</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="or_line">------------------- OR ------------------</string>
    <string name="password_criteria">Must contain numbers, letters and at least 1 special character</string>
    <string name="valid_email_address">Please enter valid e-mail address.</string>
    <string name="facebook_app_id" translatable="false">2170595886486985</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2170595886486985</string>
    <string name="request_id">Request ID: </string>
    <string name="request_type">Type: </string>
    <string name="request_status">Status: </string>
    <string name="fab_renew">RENEWAL</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="personal_number">Personal Identification Number</string>
    <string name="full_address">Full Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth - DD.MM.YYYY</string>
    <string name="new_card_screen_message">Please fill your personal information:</string>
    <string name="exchange_fragment_message">Please fill the information below:</string>
    <string name="eu_country_of_issuing">EU Country of issuing</string>
    <string name="tachograph_card_number">Tachograph card number</string>
    <string name="driver_licence_country_of_issuing">Driver license country of issuing</string>
    <string name="driving_licence_number">Driving license number</string>
    <string name="country_of_issuing">Country of issuing</string>
    <string name="tachograph_card_issuing_authority">Tachograph card issuing authority</string>
    <string name="tachograph_card_number_previous">Tachograph card number</string>
    <string name="date_of_expiry">Date of expiry DD.MM.YYYY</string>
    <string name="checkbox">Checkbox</string>
    <string name="state_date_when_that_happened">State date - DD.MM.YYYY</string>
    <string name="state_the_place_where_that_happened">State the place where that happened</string>
    <string name="next">NEXT</string>
    <string name="renew_tachograph_card">I want to renew my tachograph card because:</string>
    <string name="UsernameRegister">Username</string>
    <string name="passwordRegister">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="email_address">Email address</string>
    <string name="EMAIL_NULL">Email can\'t be empty.</string>
    <string name="EMAIL_NOT_CORRECT">Email is not valid</string>
    <string name="PASSWORD_NULL">Password can\'t be empty</string>
    <string name="PASSWORD_TOO_SIMPLE">Password is too simple</string>
    <string name="PASSWORDS_DONT_MATCH">Passwords don\'t match</string>
    <string name="REPLACEMENT">REPLACEMENT</string>
    <string name="EXCHANGE">EXCHANGE</string>
    <string name="NEW_CARD">NEW CARD</string>
    <string name="duetoexpire">My card is due to expire</string>
    <string name="card_is_suspended">My card has been suspended</string>
    <string name="card_is_withdrawn">My card has been withdrawn</string>
    <string name="header_message">You don\'t have any requests yet, if you want to create
        a request - click the button on the bottom right.</string>
    <string name="card_has_been_stolen">My card has been stolen</string>
    <string name="lost_my_card">I\'ve lost my card</string>
    <string name="card_is_malfunctioning">My card is malfunctioning</string>
    <string name="card_has_been_damaged">My card has been damaged</string>
    <string name="change_my_address">I want to change my address</string>
    <string name="change_my_name">I want to change my name</string>
    <string name="change_my_photo">I want to change my photo</string>
    <string name="header_msg_replacement">I want a replacement because:</string>
    <string name="card_has_expired">My card has expired</string>
    <string name="previous_card_info_header_msg">Please fill the information below:</string>
    <string name="first_name_cyrillic">First Name (Cyrillic)</string>
    <string name="last_name_cyrillic">Last Name (Cyrillic)</string>
    <string name="NAME_NULL">Name can\'t be empty</string>
    <string name="NAME_NOT_VALID">Name must contain only letters and symbols</string>
    <string name="CYR_NAME_NULL">Name can\'t be empty</string>
    <string name="CYR_NAME_NOT_IN_CYRILLIC">Please enter your name in cyrillic</string>
    <string name="LAST_NAME_NULL">Last name can\'t be empty</string>
    <string name="LAST_NAME_NOT_VALID">Field must contain only letters and symbols</string>
    <string name="CYR_LAST_NAME_NULL">Last name can\'t be empty</string>
    <string name="CYR_LAST_NAME_NOT_IN_CYRILLIC">Please enter your last name in cyrillic</string>
    <string name="NOT_DIGIT">Please enter only digits</string>
    <string name="ID_INVALID">ID number is too long</string>
    <string name="ADDRESS_TOO_LONG">Address is too long</string>
    <string name="COUNTRY_NULL">Field can\'t be empty</string>
    <string name="COUNTRY_TOO_LONG">Country name is too long</string>
    <string name="ISSUING_AUTHORITY_NULL">Field can\'t be empty</string>
    <string name="ISSUING_AUTHORITY_INVALID">Field is too long</string>
    <string name="TACH_NULL">Field can\'t be empty</string>
    <string name="TACH_NOT_VALID">Tachograph card number is not valid</string>
    <string name="DATE_OF_EXPIRY_NULL">Field can\'t be empty</string>
    <string name="DATE_NOT_VALID">Date must be in format dd/MM/yyy</string>
    <string name="ADDRESS_NULL">Address can\'t be empty</string>
    <string name="PHONE_NULL">Field can\'t be empty</string>
    <string name="PHONE_INVALID">Please enter a valid phone number</string>
    <string name="DATE_NULL">Field can\'t be empty</string>
    <string name="DATE_INVALID">Date input format is invalid</string>
    <string name="EMAIL_CARD_NULL">Please enter your username</string>
    <string name="EMAIL_INVALID">Email input is invalid</string>
    <string name="ID_NULL">Field can\'t be empty</string>
    <string name="date_exp" tools:ignore="TypographyDashes">^(?:(?:31(\\.)(?:0?[13578]|1[02]))\\1|(?:(?:29|30)(\\.)(?:0?[1,3-9]|1[0-2])\\2))(?:(?:1[6-9]|[2-9]\\d)?\\d{2})$|^(?:29(\\.)0?2\\3(?:(?:(?:1[6-9]|[2-9]\\d)?(?:0[48]|[2468][048]|[13579][26])|(?:(?:16|[2468][048]|[3579][26])00))))$|^(?:0?[1-9]|1\\d|2[0-8])(\\.)(?:(?:0?[1-9])|(?:1[0-2]))\\4(?:(?:1[6-9]|[2-9]\\d)?\\d{2})$</string>
    <string name="date_of_birth_regex" tools:ignore="TypographyDashes">^(?:(?:31(\\.)(?:0?[13578]|1[02]))\\1|(?:(?:29|30)(\\.)(?:0?[1,3-9]|1[0-2])\\2))(?:(?:1[6-9]|[2-9]\\d)?\\d{2})$|^(?:29(\\.)0?2\\3(?:(?:(?:1[6-9]|[2-9]\\d)?(?:0[48]|[2468][048]|[13579][26])|(?:(?:16|[2468][048]|[3579][26])00))))$|^(?:0?[1-9]|1\\d|2[0-8])(\\.)(?:(?:0?[1-9])|(?:1[0-2]))\\4(?:(?:1[6-9]|[2-9]\\d)?\\d{2})$</string>
    <string name="republic_of_bulgaria_ministry_of_transport_earta">REPUBLIC OF BULGARIA MINISTRY OF TRANSPORT EARTA</string>
    <string name="request_for_issuing_of_a_driver_card">REQUEST for issuing of a driver card</string>
    <string name="cyrName">Име:</string>
    <string name="cyrSurname">Фамилия:</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="address_preview">Address:</string>
    <string name="phone_number_preview">Phone Number:</string>
    <string name="date_of_birth_preview">Date of birth:</string>
    <string name="email_preview">Email:</string>
    <string name="additional_info_preview">Additional info:</string>
    <string name="sign_here">Sign Here</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="clear">CLEAR</string>
    <string name="save">SAVE</string>
    <string name="app_has_no_perm">The app was not allowed to write to your storage. Hence, it cannot function properly. Please consider granting it this permission</string>
    <string name="please_take_a_portrait_photo_of_yourself_and_take_a_picture_of_the_required_documents">Please take a portrait photo of yourself and take a picture of the required documents:</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="add_personal_id">Add Personal ID</string>
    <string name="add_driver_license">Add driver license</string>
    <string name="add_previous_card">Add previous card</string>
    <string name="next_documents">Next</string>
    <string name="submit">Submit</string>
    <string name="hereby_i_declare_that_all_the_provided_details_are_correct_and_understand_that_it_is_a_criminal_offense_if_i_make_a_false_declaration">Hereby I declare that all the provided details are correct and understand that it is a criminal offense if I make a false declaration.</string>
    <string name="click_below_to_submit_your_e_signature">Click below to submit your e-signature</string>
    <string name="finish_button_declaration">Finish</string>
    <string name="channel_name">CardNotification</string>
    <string name="channel_description">Notifies when a card request is approved.</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="ID_TOO_LONG">Field is too long</string>
    <string name="NAME_TOO_LONG">Field is too long</string>
    <string name="CYR_NAME_TOO_LONG">Field is too long</string>
    <string name="CYR_LAST_NAME_TOO_LONG">Field is too long</string>
    <string name="PHONE_TOO_LONG">Field is too long</string>
    <string name="EMAIL_TOO_LONG">Field is too long</string>
    <string name="LICENSE_COUNTRY_ISSUER_NULL">Field can\'t be empty</string>
    <string name="LICENSE_COUNTRY_ISSUER_INVALID">Invalid Country</string>
    <string name="LICENSE_NUMBER_NULL">Field can\'t be empty</string>
    <string name="LICENSE_NUMBER_INVALID">Field is too long</string>
    <string name="COUNTRY_INVALID">Country is invalid</string>
    <string name="USERNAME_NULL">Username can\'t be empty</string>
    <string name="USERNAME_TOO_SIMPLE">Username must be over 4 characters</string>
    <string name="USERNAME_INVALID">Username is invalid</string>
    <string name="username">Username</string>
    <string name="passwordlogin">Password</string>
    <string-array name="status_array">
        <item>NEW</item>
        <item>APPROVED</item>
        <item>DISAPPROVED</item>
        <item>WAITING</item>
    </string-array>

    <string-array name="sort_by_array">
        <item>SORT BY:</item>
        <item>STATUS</item>
        <item>DATE</item>
        <item>TYPE</item>
    </string-array>


</resources>
