<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/road"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/valid_email_address"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
        android:ems="10"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:drawableStart="@drawable/ic_last_username_icon"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/password_criteria"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
        android:ems="10"

        android:hint="@string/passwordlogin"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock_open_black_24dp"
        android:drawablePadding="10dp"
        android:paddingStart="7dp"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="17sp"
        tools:ignore="RtlSymmetry" />

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/button_login_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/black60percent"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:spinning_bar_color="@color/google_plus_brand_color"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="6dp" />

    <TextView
        android:id="@+id/text_no_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="@string/no_account"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/text_or_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/or_line"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_login_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/facebook_button"
        android:drawableStart="@drawable/facebook_vector"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:text="@string/sign_in_facebook"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/button_login_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/google_button"
        android:drawableStart="@drawable/google_plus_vector"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:text="@string/sign_in_google"
        android:textColor="@color/colorPrimary" />

</LinearLayout>