<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/test_background_two"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/sign_here"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title_size" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:weightSum="3">

        <Button
            android:id="@+id/cancel"
            android:layout_width="@dimen/weight_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@color/Onyx"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/clear"
            android:layout_width="@dimen/weight_width"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:background="@color/Onyx"
            android:text="@string/clear"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/getsign"
            android:layout_width="@dimen/weight_width"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:background="@color/Onyx"
            android:text="@string/save"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/canvasLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/CanvasBackground"
        android:orientation="vertical" />
</LinearLayout>