<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@drawable/test_background_two"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".views.create.CardCreateActivity">


    <FrameLayout
        android:id="@+id/fragment_containertwo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <TextView
        android:id="@+id/exchange_text"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/Onyx50percent"
        android:lines="2"
        android:padding="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/previous_card_info_header_msg"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/previous_eu_country_of_issuing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="35"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country_of_issuing"
            android:inputType="text"
            android:paddingBottom="18dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/issuing_authority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tachograph_card_issuing_authority"
            android:inputType="text"
            android:paddingBottom="18dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/previous_tachograph_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tachograph_card_number_previous"
            android:inputType="number"
            android:paddingBottom="18dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/date_of_expiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/date_of_expiry"
            android:inputType="date"
            android:paddingBottom="20dp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/previous_card_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="25dp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:enabled="true"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="10dp"
        android:text="@string/next"
        android:textSize="16sp" />


</LinearLayout>
